<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="a57121035_0.it.montri.seventh.MainActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/tvProname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView1"
                android:layout_weight="1" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@string/blank"
                android:ems="10"
                android:id="@+id/edtProductName"
                android:layout_weight="1" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/tvPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                android:layout_weight="1" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@string/blank"
                android:ems="10"
                android:id="@+id/edtPrice"
                android:layout_weight="1" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/tvStock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                android:layout_weight="1" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@string/blank"
                android:ems="10"
                android:id="@+id/edtStock"
                android:layout_weight="1" />
        </LinearLayout>

        <Button
            android:text="@string/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnSave" />

        <Button
            android:text="@string/btnSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnSearch" />

        <Button
            android:text="@string/btnPractice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnPractice" />

        <Button
            android:text="@string/sale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnSale" />

        <Button
            android:text="@string/btnview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnView" />
    </LinearLayout>
</RelativeLayout>
