<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="a57121035_0.it.montri.seventh.Main2Activity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:baselineAligned="false">

            <TextView
                android:text="@string/thProname"
                android:layout_width="59dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spProname"
                android:layout_weight="1"
                android:entries="@array/spProname" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@string/blank"
                android:ems="10"
                android:id="@+id/edtProname"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:baselineAligned="false"
            android:weightSum="1">

            <TextView
                android:text="@string/thPrice"
                android:layout_width="41dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView2" />

            <Spinner
                android:layout_width="131dp"
                android:layout_height="wrap_content"
                android:id="@+id/spPrice"
                android:entries="@array/spPrice"
                android:layout_weight="1.11" />

            <EditText
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@string/blank"
                android:ems="10"
                android:id="@+id/edtPricebegin"
                android:layout_width="60dp" />

            <TextView
                android:text="@string/thTo"
                android:layout_width="29dp"
                android:layout_height="wrap_content"
                android:id="@+id/tvTo"
                android:textAlignment="center" />

            <EditText
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@string/blank"
                android:ems="10"
                android:id="@+id/edtPriceend"
                android:layout_width="60dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/thCondition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView5"
                android:layout_weight="1" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spCondition"
                android:layout_weight="1"
                android:entries="@array/spCondition" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/thSort"
                android:layout_width="76dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView6" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spSort"
                android:layout_weight="1"
                android:entries="@array/spSortdata" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spType"
                android:layout_weight="1"
                android:entries="@array/spSorttype" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:text="@string/btnSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnSearch"
                android:layout_weight="1" />

            <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvText"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/No"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text1"
                android:layout_weight="1"
                android:textSize="11sp" />

            <TextView
                android:text="@string/id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text2"
                android:layout_weight="1"
                android:textSize="11sp" />

            <TextView
                android:text="@string/pn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text3"
                android:layout_weight="1"
                android:textSize="11sp" />

            <TextView
                android:text="@string/prn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text4"
                android:layout_weight="1"
                android:textSize="11sp" />

            <TextView
                android:text="@string/stk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text5"
                android:layout_weight="1"
                android:textSize="11sp" />
        </LinearLayout>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/lvdisplay" />
    </LinearLayout>

</RelativeLayout>
